--- a/src/global.css
+++ b/src/global.css
@@ -3,9 +3,9 @@
 #gradient-canvas {
     width:100%;
     height:100%;
-    --gradient-color-1: #4e011d; 
-    --gradient-color-2: #3b0718; 
-    --gradient-color-3: #260627; 
+    --gradient-color-1: #0aa5ed;
+    --gradient-color-2: #1c9dff;
+    --gradient-color-3: #0963ff;
 }
 
 ::-webkit-scrollbar{
