--- a/src/global.css
+++ b/src/global.css
@@ -1,11 +1,11 @@
 @layer reset, base, tokens, recipes, utilities;
 
 #gradient-canvas {
-    width:100%;
-    height:100%;
-    --gradient-color-1: #146aff;
-    --gradient-color-2: #0c34d3;
-    --gradient-color-3: #6673ff;
+    width: 100%;
+    height: 100%;
+    --gradient-color-1: #110ee9;
+    --gradient-color-2: #2509be;
+    --gradient-color-3: #0e08bf;
 }
 
 ::-webkit-scrollbar{
