Refactor code structure for improved readability and maintainability

--- a/src/global.css
+++ b/src/global.css
@@ -5,7 +5,7 @@
     height: 100%;
     --gradient-color-1: #110ee9;
     --gradient-color-2: #2509be;
-    --gradient-color-3: #0e08bf;
+    --gradient-color-3: #0600a6;
 }
 
 ::-webkit-scrollbar{
